--- a/.github/workflows/testworkflows.yml
+++ b/.github/workflows/testworkflows.yml
@@ -1,20 +1,28 @@
-name: Super-Linter
+# workflow name 
+name: build and test the app 
 
-# Controls when the workflow will run
-on: push
+# when the workflow will be triggered 
+on: 
+  push: 
+    branches: 
+      - main 
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  super-lint:
-    name: Lint code base
-    runs-on: ubuntu-latest
+# where will the workflow run 
+jobs: 
+  run_unit_tests: 
+    runs-on: ubuntu-latest 
+    steps: 
+     # checkout repository 
+      - name: Checkout 
+        uses: actions/checkout@v2.4.0 
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+   # install java  
+      - name: Setup JDK 
+        uses: actions/setup-java@v2.4.0 
+        with: 
+          distribution: 'zulu' 
+          java-version: '8' 
 
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+   # use gradle commands 
+      - name: Setup Gradle 
+        uses: gradle/gradle-build-action@v2 
